[gd_scene load_steps=55 format=3 uid="uid://koyd58kq2e1p"]

[ext_resource type="Script" path="res://Assets/UI/PowerTracker.gd" id="1_34utm"]
[ext_resource type="Texture2D" uid="uid://bp64y3fmv4de0" path="res://Assets/UI/Sprites/UI Overlay.png" id="2_klwct"]
[ext_resource type="Texture2D" uid="uid://trmrdc6clqus" path="res://Assets/Sprites/earth_symbol.png" id="3_10cr1"]
[ext_resource type="Texture2D" uid="uid://d3cqbont2jfpe" path="res://Assets/Sprites/wind_symbol.png" id="4_0urd5"]
[ext_resource type="Texture2D" uid="uid://8rfqlpfsce8m" path="res://Assets/Sprites/water_symbol.png" id="5_rbynj"]
[ext_resource type="Texture2D" uid="uid://j6i1ehlae7gg" path="res://Assets/Sprites/fire_symbol.png" id="6_70mdx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xig27"]
atlas = ExtResource("3_10cr1")
region = Rect2(175, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3dri"]
atlas = ExtResource("3_10cr1")
region = Rect2(200, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8p4j"]
atlas = ExtResource("3_10cr1")
region = Rect2(225, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_hanc6"]
atlas = ExtResource("3_10cr1")
region = Rect2(250, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7kq4"]
atlas = ExtResource("3_10cr1")
region = Rect2(0, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcdau"]
atlas = ExtResource("3_10cr1")
region = Rect2(25, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_57qjq"]
atlas = ExtResource("3_10cr1")
region = Rect2(50, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcpff"]
atlas = ExtResource("3_10cr1")
region = Rect2(75, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_slnx4"]
atlas = ExtResource("3_10cr1")
region = Rect2(100, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3ulp"]
atlas = ExtResource("3_10cr1")
region = Rect2(125, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_emkus"]
atlas = ExtResource("3_10cr1")
region = Rect2(150, 0, 25, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_mismf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xig27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3dri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8p4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hanc6")
}],
"loop": true,
"name": &"Symbol Active",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7kq4")
}],
"loop": true,
"name": &"Symbol Off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcdau")
}],
"loop": true,
"name": &"Symbol On",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_57qjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcpff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slnx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3ulp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emkus")
}],
"loop": true,
"name": &"Symbol Ready",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_rvyxe"]
atlas = ExtResource("4_0urd5")
region = Rect2(175, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_yy17n"]
atlas = ExtResource("4_0urd5")
region = Rect2(200, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1yce"]
atlas = ExtResource("4_0urd5")
region = Rect2(225, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_yk8ql"]
atlas = ExtResource("4_0urd5")
region = Rect2(250, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_10nve"]
atlas = ExtResource("4_0urd5")
region = Rect2(0, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_yiqcu"]
atlas = ExtResource("4_0urd5")
region = Rect2(25, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_unowo"]
atlas = ExtResource("4_0urd5")
region = Rect2(75, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_8h74o"]
atlas = ExtResource("4_0urd5")
region = Rect2(100, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r8ht"]
atlas = ExtResource("4_0urd5")
region = Rect2(125, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkj3q"]
atlas = ExtResource("4_0urd5")
region = Rect2(150, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnld7"]
atlas = ExtResource("4_0urd5")
region = Rect2(50, 0, 25, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_wuktk"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvyxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yy17n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1yce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yk8ql")
}],
"loop": true,
"name": &"Symbol Active",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_10nve")
}],
"loop": true,
"name": &"Symbol Off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yiqcu")
}],
"loop": true,
"name": &"Symbol On",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_unowo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h74o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r8ht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkj3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnld7")
}],
"loop": true,
"name": &"Symbol Ready",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ev2ed"]
atlas = ExtResource("5_rbynj")
region = Rect2(175, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptdu7"]
atlas = ExtResource("5_rbynj")
region = Rect2(200, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpir5"]
atlas = ExtResource("5_rbynj")
region = Rect2(225, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gof7"]
atlas = ExtResource("5_rbynj")
region = Rect2(250, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_icyo1"]
atlas = ExtResource("5_rbynj")
region = Rect2(0, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_1m5tg"]
atlas = ExtResource("5_rbynj")
region = Rect2(25, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_6f8qp"]
atlas = ExtResource("5_rbynj")
region = Rect2(50, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwixd"]
atlas = ExtResource("5_rbynj")
region = Rect2(75, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_tefjw"]
atlas = ExtResource("5_rbynj")
region = Rect2(100, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_nuws8"]
atlas = ExtResource("5_rbynj")
region = Rect2(125, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_eimbg"]
atlas = ExtResource("5_rbynj")
region = Rect2(150, 0, 25, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_no181"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ev2ed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptdu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpir5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gof7")
}],
"loop": true,
"name": &"Symbol Active",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_icyo1")
}],
"loop": true,
"name": &"Symbol Off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1m5tg")
}],
"loop": true,
"name": &"Symbol On",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6f8qp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwixd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tefjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nuws8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eimbg")
}],
"loop": true,
"name": &"Symbol Ready",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_d2d58"]
atlas = ExtResource("6_70mdx")
region = Rect2(175, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mn6k"]
atlas = ExtResource("6_70mdx")
region = Rect2(200, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_lihq0"]
atlas = ExtResource("6_70mdx")
region = Rect2(225, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnmqo"]
atlas = ExtResource("6_70mdx")
region = Rect2(250, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_qojq6"]
atlas = ExtResource("6_70mdx")
region = Rect2(0, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqs83"]
atlas = ExtResource("6_70mdx")
region = Rect2(25, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_e531v"]
atlas = ExtResource("6_70mdx")
region = Rect2(50, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_uan1j"]
atlas = ExtResource("6_70mdx")
region = Rect2(75, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_o62im"]
atlas = ExtResource("6_70mdx")
region = Rect2(100, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_agjf3"]
atlas = ExtResource("6_70mdx")
region = Rect2(125, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_rj0fl"]
atlas = ExtResource("6_70mdx")
region = Rect2(150, 0, 25, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_asokx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2d58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mn6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lihq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnmqo")
}],
"loop": true,
"name": &"Symbol Active",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qojq6")
}],
"loop": true,
"name": &"Symbol Off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqs83")
}],
"loop": true,
"name": &"Symbol On",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e531v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uan1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o62im")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agjf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rj0fl")
}],
"loop": true,
"name": &"Symbol Ready",
"speed": 5.0
}]

[node name="PowerTracker" type="CanvasLayer"]
scale = Vector2(3, 3)
transform = Transform2D(3, 0, 0, 3, 0, 0)
script = ExtResource("1_34utm")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(37, 37)
scale = Vector2(0.578125, 0.578125)
texture = ExtResource("2_klwct")

[node name="EarthSymbol" type="AnimatedSprite2D" parent="."]
position = Vector2(37, 52)
sprite_frames = SubResource("SpriteFrames_mismf")
animation = &"Symbol Ready"
frame_progress = 0.336641

[node name="AirSymbol" type="AnimatedSprite2D" parent="."]
position = Vector2(37, 21)
sprite_frames = SubResource("SpriteFrames_wuktk")
animation = &"Symbol Off"
frame_progress = 0.269722

[node name="WaterSymbol" type="AnimatedSprite2D" parent="."]
position = Vector2(54, 36)
sprite_frames = SubResource("SpriteFrames_no181")
animation = &"Symbol Ready"
frame_progress = 0.969704

[node name="FireSymbol" type="AnimatedSprite2D" parent="."]
position = Vector2(21, 37)
sprite_frames = SubResource("SpriteFrames_asokx")
animation = &"Symbol Ready"
frame_progress = 0.829404
